styles.css
@import url("https://fonts.googleapis.com/css2?family=Orbitron&family=Poppins:wght@700&family=Roboto:wght@700&family=Water+Brush&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  overflow: hidden;
  height: 100%;
}

body {
  overflow-x: hidden;
  overflow-y: scroll;
  height: 100%;
  perspective: 1px;
  transform-style: preserve-3d;
  background: rgb(32, 32, 32) ;
  color: white;

  a {
    color: inherit;
    text-decoration: none;
  }
}
/* use #50cde9 for light background */
body.light {
  background: #50cde9;
}

/* START OF HERO SECTION */
.hero {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  min-height: 100vh;
  width: 100%;
  transform-style: inherit;
  transition: all 1.5s ease-in-out;
  z-index: -1;

  & .cloud {
    position: absolute;
    opacity: .7;
    width: 100%;
    right: -200%;
    transform: translateZ(-1px) scale(1.5);
    animation: moveToLeft 25s linear infinite;
  }

  & .plane {
    position: absolute;
    left: -100px;
    top: 50%;
    transform: rotate(-10deg);
    animation: fly 15s linear infinite;
  }

  & .content {
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: auto;

    & h1 {
      font-family: "Poppins", sans-serif;
      font-size: calc(2.5rem + 3vw);
      margin: 10px;
      text-align: center;
    }

    & h2 {
      position: relative;
      font-family: "Orbitron", sans-serif;
      color: rgb(206, 54, 43);
      text-transform: uppercase;
      letter-spacing: 1px;
      font-size: 3rem;
      margin: 10px;
      text-align: center;
    }

    & h2::before {
      content: "";
      height: 3px;
      background: #fff;
      position: absolute;
      bottom: 0;
      left: 50%;
      transform: translateX(-50%);
      margin-top: 5px;
      animation: stretch .5s linear forwards;
      animation-delay: 3s;
    }

    & h3 {
      font-family: "Roboto", sans-serif;
      font-weight: bolder;
      color: rgb(206, 54, 43);
      font-size: 2.5rem;
      margin: 10px;
    }

    & .see-more {
      background: transparent;
      border: 1px solid #fff;
      color: #fff;
      font-weight: bold;
      font-size: 1.5rem;
      padding: 20px 30px;
      margin-top: 50px;
      transition: all 0.5s ease-in-out;

      &:hover {
        background: #fff;
        color: black;
      }
    }

    
  }

  /* MOON */
  & .moon {
    position: absolute;
    width: 100px;
    height: 100px;
    background: #fff;
    box-shadow: 0px 0px 50px #ffffffc7;
    border-radius: 50%;
    overflow: hidden;
    right: 0;
    top: 0;
    transform: translateZ(-1px) scale(2);
    z-index: -1;
    transition: 1.5s ease-in-out;

    & span {
        position: absolute;
    }

    & span:nth-child(1) {
        content: "";
        width: 20px;
        height: 20px;
        background-color: rgba(128, 128, 128, 0.329);
        border-radius: 50%;
        top: 10%;
        left: 50%;
    }

    & span:nth-child(2) {
        content: "";
        width: 40px;
        height: 40px;
        background-color: rgba(128, 128, 128, 0.329);
        border-radius: 50%;
        bottom: 10%;
        right: 5%;
    }

    & span:nth-child(3) {
        content: "";
        width: 15px;
        height: 15px;
        background-color: rgba(128, 128, 128, 0.329);
        border-radius: 50%;
        top: 30%;
        left: 10%;
    }

    & span:nth-child(4) {
        content: "";
        width: 25px;
        height: 25px;
        background-color: rgba(128, 128, 128, 0.329);
        border-radius: 50%;
        bottom: 5%;
        left: 0;
    }
  }

  /* SUN */
  & .moon.sun {
    background: #fdf03a;
    transition: 1.5s ease-in-out;

    & span {
        background: transparent;
    }
  }

  & .see-more {
    z-index: 9;
  }

  & .toggle-theme {
    position: fixed;
    background: #50cde9;
    border: none;
    box-shadow: 0px 3px 3px gray;
    right: 10%;
    bottom: 10%;
    width: 80px;
    height: 30px;
    z-index: 999;
    transition: all .4s ease;
  }

  & .toggle-theme:active {
    background: #018aa8;
    transform: translateY(5px);
    box-shadow: -1px 1px 3px gray;
  }

  & .stars {
    position: absolute;
    width: 100%;
    height: 100%;
    z-index: 1;
  }

  & .star {
    position: absolute;
    width: 3px;
    height: 3px;
    background-color: white;
    border-radius: 50%;
    animation: twinkle 2s infinite;
  }
}

.hero::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: block;
  background: url(assets/cloud.png) top center;
  background-size: cover;
  transform: translateZ(-1px) scale(2);
  min-height: 100%;
  z-index: -2;
}



/* END OF HERO SECTION */

/* LIGHT THEME FOR HERO */
.hero.light {
  position: relative;
  color: #2196f3;
  transition: all .7s ease-in-out;

  & .stars {
    display: none;
  }

  & h3 {
    color: rgb(101 101 101);
  }

  & h2 {
    color: #00569b;
    transition: 0.8s ease-in-out;

    &::before {
      background: #3f51b5;
    }
  }

  & .see-more {
    background: #fff;
    color: #2196F3;
    border: 1px solid #ccc;
  }

}

.hero.light::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: block;
  background: url(assets/cloud.png), linear-gradient(to bottom, #50cde9, #fff) top center;
  background-size: cover;
  transform: translateZ(-1px) scale(2);
  min-height: 100%;
  z-index: -2;
}
/* END OF LIGHT THEME FOR HERO */


/* START OF ABOUT SECTION */
.about {
  background: linear-gradient(to bottom, #141414, #272727);
  display: flex;
  width: 100vw;
  max-width: 100%;
  padding-top: 100px;
  z-index: 1;

  & .container {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: calc(100vw - 15%);
    max-width: 100%;
    height: 500px;
    border: 2px solid #3b3b3b;
    box-shadow: -5px 5px 10px black;
    margin: auto;
    padding: 30px;
    overflow: hidden;

    & img {
      min-width: 400px; 
    }

    & h1 {
      position: relative;
      font-family: "Water Brush", sans-serif;
      font-size: 6rem;
      margin-bottom: 20px;
      z-index: 2;
    }
/* 
    & .pseudo-h1 {
      position: absolute;
      top: 5%;
      left: 0;
      color: rgba(43, 42, 42, 0.32);
      font-size: 10rem;
      font-family: "Water Brush", sans-serif;
    } */

    & .about-group1 {
      display: flex;
      flex-direction: column;
      align-items: center;
      padding: 50px;
    }
  }

  & .container::before {
      content: "About Me";
      position: absolute;
      color: rgba(43, 42, 42, 0.32);
      font-size: 12rem;
      font-family: "Water Brush", sans-serif;
      top: 0;
      left: 0;
    }
}

.about.light {
  background: linear-gradient(to bottom, #fff, #50cde9);
}
/* END OF ABOUT SECTION */


/* START OF CONTACT SECTION */
.contact {
  background: #272727;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 70vh;
  padding: 50px 80px;

  & .group1 {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 50px;
    padding: 0 80px;

    & h1 {
      font-family: "Water Brush", sans-serif;
      font-size: 6rem;
      margin: 20px;
    }

    & p {
      text-align: center;
    }
  }

  & .group2 {
    display: flex;
    margin: 50px;

    .icon {
      fill: #fff;
      width: 80px;
    }
  }
}

.contact.light {
  background: #50cde9;
}
/* END OF CONTACT SECTION */


/* START OF PROJECT SECTION */
.projects {
  background: linear-gradient(to top, black, #272727);
  display: flex;
  width: 100vw;
  max-width: 100%;

  & .container {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: calc(100vw - 15%);
    max-width: 100%;
    height: 500px;
    border: 2px solid #3b3b3b;
    box-shadow: -5px 5px 10px black;
    margin: auto;
    padding: 30px;
    overflow: hidden;

    & .project-wrapper {
      display: flex;

      & img {
        min-width: 400px;
      }
      
      & .project-group1 {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        padding: 50px;

      & h1 {
        position: relative;
        font-family: "Water Brush", sans-serif;
        font-size: 6rem;
        margin-bottom: 20px;
        z-index: 2;
      }
    }
  }
    /* & .pseudo-h1 {
      position: absolute;
      top: 5%;
      left: 5%;
      color: rgba(43, 42, 42, 0.32);
      font-size: 10rem;
      font-family: "Water Brush", sans-serif;
    } */
    
  }

  & .container::before {
      content: "Projects";
      position: absolute;
      color: rgba(43, 42, 42, 0.32);
      font-size: 12rem;
      font-family: "Water Brush", sans-serif;
      top: 0;
      right: 20%;
    }
}

.projects.light {
  background: linear-gradient(to bottom, #50cde9, #fff);
}
/* END OF PROJECT SECTION */


/* START OF BLOG SECTION */
.blog {
  background: #272727;
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 70vh;
  padding: 50px 80px;

  & .group1 {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 50px;
    padding: 0 80px;

    & h1 {
      font-family: "Water Brush", sans-serif;
      font-size: 6rem;
      margin: 20px;
    }

    & p {
      text-align: center;
    }
  }
}

.blog.light {
  background: linear-gradient(to bottom, #fff, #50cde9);
}
/* END OF BLOG SECTION */

/* ANIMATIONS */

@keyframes twinkle {
  0% {
    opacity: 0.8;
  }
  25% {
    opacity: 0.4;
  }
  50% {
    opacity: 0.2;
  }
  100% {
    opacity: 0.8;
  }
}

@keyframes stretch {
    from {
        width: 0;
    }
    to {
        width: 100%;
    }
}

@keyframes fly {
  from {
    left: -100px;
  }
  to {
    top: 10%;
    left: 110%;
  }
}


@keyframes moveToLeft {
  from {
    right: -200%;
  }
  to {
    right: 200%;
  }
}

@media only screen and (max-width: 1024px) {

  .about .container h1,
  .contact .group1 h1,
  .projects .container .project-group1 h1,
  .blog .group1 h1 {
    font-size: 5rem;
  }

  .hero .content h2 {
      font-size: 2rem;
  }

  .hero .plane {
    width: 20vw;
    transform: rotate(336deg);
  }

  .contact .group2 .icon {
    width: 50px;
  }

}

